test/scc/stmt/semantic-errors/052.a
052.t:4:12: error: return discards 'const' qualifier